Refactor HTML/CSS render helpers and fixes
Refactors and hardens various HTML/CSS rendering utilities and components across the core and resolver modules. Key changes:

- Security: add implNote to IncludeResolver recommending path validation to avoid directory traversal.
- Bug fixes: return cleaned href in BodyComponent link sanitizer; validate orderedMap args.
- MSO/VML: factor MSO and VML markup into MsoHelper and new VmlHelper helper methods to reduce duplication and clarify building blocks.
- Carousel: extract appendCssRuleBlock and SelectorWriter to simplify repetitive CSS selector generation.
- Performance & correctness: switch string concatenation to StringBuilder for MjTable and other places; improve HtmlAttributeApplier to use a forward-pass copy to apply insertions without repeated inserts.
- Parsing & caching: introduce StyleRange for HtmlDocumentParser; cache and invalidate unmodifiable attribute wrappers and mj-class name arrays in HtmlElement and MjmlNode; AttributeContext now returns unmodifiable maps.
- CSS inliner: add a comparator constant for AppliedStyle ordering and use it for sorting.
- Escaping: improve CssEscaper to handle newline/CR; HtmlSkeleton uses safer text escaping and class name sanitization.
- RenderPipeline: fix registry cache eviction to actually remove an entry safely.
- Tests: add HtmlElementTest and multiple unit tests (direction enum branches and others) to increase coverage and guard regressions.

Overall these changes improve readability, reduce duplication, fix bugs, and strengthen security and correctness in HTML/CSS rendering logic.